--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <meta charset="utf-8">
-  <title>AirBnB Clone</title>
-
-  <body style="margin: 0; padding: 0;">
-    <header style="background-color: #f00; height: 70px; width: 100%;">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Airbnb clone</title>
+  </head>
+  <body style="margin:0; padding:0;">
+    <header style="background-color: #FF0000; height: 70px; width: 100%">
     </header>
-    <footer style="align-items: center;
-                   background-color: #0f0;
-                   bottom: 0;
-                   display: flex;
-                   height: 60px;
-                   justify-content: center;
-                   position: absolute;
-                   width: 100%;">
-      Holberton School
-    </footer>
+    <Footer style="background-color: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0">
+      <p style="text-align: center; vertical-align: middle;">Holberton School</p>
+    </Footer>
   </body>
-</html>
+ </html>
