--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>AirBnB Clone</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Airbnb clone</title>
     <style>
       body {
-        margin: 0;
-        padding: 0;
+      margin: 0;
+      padding: 0;
       }
 
       header {
-        background: #f00;
-        height: 70px;
-        width: 100%;
+      background-color: #FF0000;
+      height: 70px;
+      width: 100%;
       }
 
       footer {
-        align-items: center;
-        background-color: #0f0;
-        bottom: 0;
-        display: flex;
-        height: 60px;
-        justify-content: center;
-        position: absolute;
-        width: 100%;
+      background-color: #00FF00;
+      height: 60px;
+      width: 100%;
+      position: absolute;
+      bottom: 0;
       }
 
+      p {
+      text-align: center;
+      vertical-align: middle;
+      }
     </style>
   </head>
-
   <body>
-    <header></header>
+    <header>
+    </header>
     <footer>
-      Holberton School
+      <p>Holberton School</p>
     </footer>
   </body>
-</html>
+  </html>
