--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/2-common.css">
-    <link rel="stylesheet" href="styles/2-header.css">
-    <link rel="stylesheet" href="styles/2-footer.css">
+    <meta charset="UTF-8">
+    <title>Airbnb clone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles/2-common.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-header.css">
+    <link rel="stylesheet" type="text/css" href="styles/2-footer.css">
   </head>
-
   <body>
-    <header></header>
+    <header>
+    </header>
     <footer>
-      Holberton School
+      <p>Holberton School</p>
     </footer>
   </body>
-</html>
+  </html>
